# super-shelve

./: .gitignore  README.md  pyproject.toml
src/super_shelve/: __init__.py  super_shelve.py
tests/: test_super_shelve.py
